name:                achaeabot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/narrative/achaeabot#readme
license:             BSD3
license-file:        LICENSE
author:              erik stevenson
maintainer:          eriknstevenson@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bot, Bot.GameAPI, Bot.TwitterAPI
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , conduit
                     , either
                     , servant
                     , servant-client
                     , text
                     , time
                     , transformers
                     , twitter-conduit
  default-language:    Haskell2010

executable achaeabot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , achaeabot
  default-language:    Haskell2010

test-suite achaeabot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , achaeabot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/narrative/achaeabot
